2001-08-17  Max Horn <max@quendi.de>
	* audio/pcb.*: fixed possible crash on MacOS, some clean up
	* audio/midi_drivers/mac_midi.*: compiles again on classic MacOS
	* fnames.h: changed for MacOS X again (set default value for EXULT_DATADIR)
	* gamewin.*: red plasma is now blue in SI

2001-08-17  Ryan Nunn <triforce@merlin.net.au>
	* actors.cc : Swamp boots should now work in SI
	* cheat.cc : Namespace stuff
	* msvcstuff/Exult.dsp : Added extra files to the project

2001-08-16  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Create random # of monsters, and find
	free spots for them (which could be better, since it's not
	checking their whole footprints, but I want to create a general
	method for doing that).
	* usecode/ucinternal.cc: SI crystal balls working again.
	* usecode/intrinsics.cc: run_usecode() replaced by set_path_failure().
	
2001-08-15  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.cc (If_else_path_actor_action): New action type.
	* ucinternal.cc,intrinsics.cc:  Rewrote 'path_run_usecode()'.
	Still not quite done (got to redo run_usecode()).

2001-08-14  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/Docs/opcodes.txt: more updates, changes to handle
	additional output format options
	* usecode/ucxt/*.[cc|h]: fiddled with command line options; added
	additional assembler output options; old-ucs format "works" extremely
	brokenly rather then assert() failing; can now output entire
	USECODE file; squished obscure crash bug.
	* (quick update) usecode/ucxt/*: removed imbedded intrinsic table,
	now stealing it from ??intriniscs.h

2001-08-14  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Test 'dont_die' flag during combat.

2001-08-13  Max Horn <max@quendi.de>
	* audio/Audio.cc: make use of exceptions
	* audio/midi_drivers/mac_midi.cc: dynamic buffer resizing, enhanced pitch
	  bend support, some fixes
	* gumps/File_gump.cc: fixed Gump_text::paint() to match other gumps